--- a/finance/慢慢变富.md
+++ b/finance/慢慢变富.md
@@ -59,7 +59,7 @@
 
 
 
-个人投资者最大的优势是能”熬“，在股市上能打”持久战“。如果你有基本的收入，或者你的基本生活问题已经解决了，在股市中你就更没有必要去赚快钱。不疾而速，慢就是快。
+**个人投资者最大的优势是能”熬“，在股市上能打”持久战“。如果你有基本的收入，或者你的基本生活问题已经解决了，在股市中你就更没有必要去赚快钱。不疾而速，慢就是快。**
 
 
 
