--- a/基础/GO/基础知识.md
+++ b/基础/GO/基础知识.md
@@ -9,3 +9,27 @@
 
 
 
+printf函数按格式输出
+
+<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220521095952328.png" alt="image-20220521095952328" style="zoom:50%;margin-left:-1px" />
+
+
+
+
+
+A pointer value is the address of a variable
+
+
+
+
+
+##### Goroutines and Channels
+
+f() ：call f(); wait for it to return
+
+go f()：create a new goroutine that calls f();don't wait
+
+
+
+
+
