--- a/daily/心理学/象与骑象人.md
+++ b/daily/心理学/象与骑象人.md
@@ -63,4 +63,124 @@
 ​	对佛陀来说，心理依恋就像在赌轮盘一样，是别人在转轮盘操控这场赌局：越沉迷其中，就输的越惨。
 
 * 认知疗法
-* 
+
+​		教导骑象人如何训练大象，而不是直接跟大象说理，把大象打败。
+
+* 百忧解
+
+人生取决于我们自己如何看待，而我们的人生就是自己心理创造出来的产物。只有在我们了解自我是分裂而非一体的（骑象人及大象），了解人有消极情绪倾向及不同情感风格后，这样的说法才能真的帮助我们面对人生。
+
+
+
+
+
+# 我们如何相处【大象的力量】
+
+人有一种无心、自发式的互惠本能反应
+
+
+
+要想在人生竞赛中打胜仗，就必须把自己最好的一面表现出来，已昭世人，我们必须表现得很有品德
+
+贪婪、野心只解释了小部分暴力事件的成因，虐待狂则几乎不成原因，邪恶两大最大的成因是：自尊心太强及道德理想主义。
+
+
+
+
+
+
+
+# 追求幸福的方法【驭象之道】
+
+
+
+研究幸福两大发现：
+
+* 基因对个人的平均幸福程度影响很大
+* 大部分的环境因素及人口统计因素对幸福影响甚微
+
+
+
+愉悦必须有所节制，这时就是骑象人出马的时候了，因为大象很容易会有不知节制的反应， 骑象人就得及时出现，鼓励大象继续向前，进行下一个活动。
+
+感官享受会引诱人沉溺其中，让人远离对自己有益的活动。满足感则不同了，满足感会不断鞭策我们，挑战我们的极限，逼迫我们使尽全力发挥潜能。一旦进入”心流“的状态，再难的工作都会变得像不费吹灰之力般轻松。
+
+
+
+
+
+内在运作模式会主导其人生最重要关系的建立，就像安全型依恋的宝宝会比较快乐，调适能力也比较强一样，安全型依恋的成人同样也比较快乐、长久的亲密关系，离婚率也比较低。
+
+如果激清是一种毒品，那么它的力量一定会有消退的一天。没有人可以永远处于亢奋状态
+
+
+
+
+
+关心他人者要比接受帮助者获益更大
+
+
+
+
+
+# 心理的成长
+
+富兰克林的美德：
+
+节制 - 食不过饱
+
+节俭 - 珍惜一丝一缕
+
+贞洁 - 不可纵欲
+
+
+
+柏拉图的《理想国》及亚里士多德的《尼各马可伦理学》
+
+
+
+对于人格优势，塞利格曼与彼得森提出24项原则：
+
+1.智慧
+
+* 好奇心、对世界的兴趣
+* 热爱学习
+* 判断力、批判性思维、思想开
+* 创造性、实用智慧、街头智慧
+* 社会智慧、个人智慧、情商
+* 洞察力
+
+2.勇气
+
+* 勇敢与勇气
+* 毅力、勤劳、勤勉
+* 正直、真诚、诚实
+
+3.仁爱
+
+* 仁慈与慷慨
+* 爱与被爱
+
+4.正义
+
+* 公民精神、责任、团队精神、忠诚
+* 公平与公正
+* 领导力
+
+5.节制
+
+* 自我控制
+* 谨慎、小心
+* 谦虚
+* 精神卓越
+
+6.精神卓越
+
+* 对美和卓越的欣赏
+* 感恩
+* 希望、乐观、展望未来
+* 灵性、目标感、信仰、宗教
+* 宽恕与慈悲
+* 幽默
+* 热忱、热情、热衷
+
