--- a/database/日常操作.md
+++ b/database/日常操作.md
@@ -47,3 +47,11 @@ db.getCollection('202105_person_time').update({"courseType":"精品定制课","c
 
 
 
+
+
+### vi/vim中如何在每行行首或行尾插入指定字符串
+
+行首 `:%s/^/your_word/`
+
+行尾 `:%s/$/your_word/`
+
