--- a/finance/要读的书/1.md
+++ b/finance/要读的书/1.md
@@ -1,110 +1,66 @@
 投资：
 
-<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220619012948757.png" alt="image-20220619012948757" style="zoom:50%;margin-left:-2px" />
+《追寻价值之路》
+
+《涛动周期两部曲》
+
+《逃不开的经济周期》
+
+《大败局》     吴晓波
+
+《估值逻辑 中国的繁荣》
+
+《买入、持有、富有》
+
+《中国资本市场：第三种模式》
+
+《资本回报  穿越资本周期的投资》
 
 
 
-<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220619013012429.png" alt="image-20220619013012429" style="zoom:50%;margin-left:-1px" />
+商业
 
+《正向盈利》
 
+《为什么是中国》  金一南
 
+《3G资本帝国》
 
+《分析与思考》
 
-<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220619013043107.png" alt="image-20220619013043107" style="zoom:50%;margin-left:-2px" />
+《伟大的博弈》
 
+《文明的冲突 + 文明的冲突与世界秩序的重建》
 
-
-<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220619013341965.png" alt="image-20220619013341965" style="zoom:50%;margin-left:-2px" />
-
-
-
-经济下行买白马，消费降级口红效应。
-
-<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220619020906794.png" alt="image-20220619020906794" style="zoom:50%;margin-left:-2px" />
-
-
+《精英的傲慢》
 
 
 
 小说：
 
-<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220619180453780.png" alt="image-20220619180453780" style="zoom:50%;margin-left:-2px" />
+《海边的卡夫卡》  村上春树
+
+《静静的顿河》
+
+《爱的流放地》
+
+《日瓦戈医生》
+
+《白鲸》
+
+《我是个怪圈 人类意识可以被复制吗》
+
+《茶馆之殇》
+
+《秋园》
+
+《叫魂》
 
 
 
-<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220619180602783.png" alt="image-20220619180602783" style="zoom:50%;margin-left:-2px" />
+经济下行买白马，消费降级口红效应。
 
 
-
-
-
-<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220619180732468.png" alt="image-20220619180732468" style="zoom:50%;margin-left:-2px" />
-
-
-
-
-
-<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220619230635377.png" alt="image-20220619230635377" style="zoom:50%;margin-left:-3px" />
-
-<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220619230717062.png" alt="image-20220619230717062" style="zoom:50%;margin-left:-3px" />
-
-<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220619230809896.png" alt="image-20220619230809896" style="zoom:50%;margin-left:-3px" />
-
-
-
-![image-20220619233435366](/Users/yangli/Library/Application Support/typora-user-images/image-20220619233435366.png)
-
-![image-20220619234008088](/Users/yangli/Library/Application Support/typora-user-images/image-20220619234008088.png)
-
-
-
-
-
-![image-20220620103644517](/Users/yangli/Library/Application Support/typora-user-images/image-20220620103644517.png)
-
-
-
-![image-20220620103913256](/Users/yangli/Library/Application Support/typora-user-images/image-20220620103913256.png)
-
-![image-20220620104520149](/Users/yangli/Library/Application Support/typora-user-images/image-20220620104520149.png)
-
-
-
-
-
-![image-20220620110948783](/Users/yangli/Library/Application Support/typora-user-images/image-20220620110948783.png)
-
-![image-20220620180122847](/Users/yangli/Library/Application Support/typora-user-images/image-20220620180122847.png)
-
-
-
-
-
-![image-20220620180201245](/Users/yangli/Library/Application Support/typora-user-images/image-20220620180201245.png)
-
-
-
-![image-20220620180235501](/Users/yangli/Library/Application Support/typora-user-images/image-20220620180235501.png)
-
-
-
-![image-20220620180608509](/Users/yangli/Library/Application Support/typora-user-images/image-20220620180608509.png)
-
-
-
-
-
-![image-20220620180651081](/Users/yangli/Library/Application Support/typora-user-images/image-20220620180651081.png)
-
-
-
-![image-20220620180930698](/Users/yangli/Library/Application Support/typora-user-images/image-20220620180930698.png)
-
-![image-20220620180958471](/Users/yangli/Library/Application Support/typora-user-images/image-20220620180958471.png)
-
-
-
-![image-20220620181030354](/Users/yangli/Library/Application Support/typora-user-images/image-20220620181030354.png)
 
 
 
