--- a/database/日常操作.md
+++ b/database/日常操作.md
@@ -45,6 +45,8 @@ Mysql5.6引入了索引下推优化
 db.getCollection('202105_person_time').update({"courseType":"精品定制课","createTime":{$gt:"2021-08-24"}},{$set:{oldOrNewBoutique:'NEW_BOUTIQUE'}},{multi:true});
 ```
 
+multi：可选，mongoDB默认是false，只更新找到的第一条记录，如果这个参数是true，
+
 
 
 
