--- a/finance/要读的书/1.md
+++ b/finance/要读的书/1.md
@@ -16,6 +16,8 @@
 
 《资本回报  穿越资本周期的投资》
 
+《资本主义、社会主义与民主》 约瑟夫熊彼特
+
 
 
 商业
@@ -33,6 +35,20 @@
 《文明的冲突 + 文明的冲突与世界秩序的重建》
 
 《精英的傲慢》
+
+《大癫狂：群体性狂热与泡沫经济》
+
+《经济发展理论》 约瑟夫 熊彼特
+
+《只有偏执狂才能生存》 安迪格鲁夫
+
+《在不确定的世界：从华尔街到华盛顿》 鲁宾
+
+《重新定义公司：谷歌是如何运行的》
+
+《结构性改革》 黄奇帆
+
+《企业即算法》 王亚军
 
 
 
@@ -61,6 +77,8 @@
 经济下行买白马，消费降级口红效应。
 
 
+
+经济学领域有著名的“三论”即《国富论》（亚当·斯密）、《资本论》（卡尔·马克思）、《通论》（凯恩思）；证券投资市场亦有“三论”即《道氏理论》、《江恩理论》和《波浪理论》
 
 
 
