--- a/finance/学习财报/小北读财报.md
+++ b/finance/学习财报/小北读财报.md
@@ -31,3 +31,66 @@
 
 
 没有企业愿意使用加速折旧法，基本使用的是年限折旧法
+
+
+
+### 投资性房地产
+
+投资性房地产价值如何计量？
+
+企业持有投资性房地产有两种后续计量方法
+
+* 成本模式计量的投资性房地产
+
+  需要根据资产原值和预计使用年限，计提相应的折旧和摊销；折旧和摊销最终会反映到利润表上，减少企业的净利润
+
+* 采用公允价值模式计量的投资性房地产
+
+  不需要计提折旧和摊销，使用公允价值计价的投资性房地产的价值会随时发生变化，进而产生**公允价值变动损益**，房价升了，公允价值变动损益就会增加，进而增加企业的净利润
+
+
+
+##### 公允价值计量对财务报表有哪些影响？
+
+如果房价上涨，将会增加资产负债表的“未分配利润”，减少净利润的营业成本和费用
+
+
+
+### 企业理财情况
+
+可以通过【资产负债表】里面的【交易性金融资产】、【投资性房地产】等了解到企业的投资理财情况
+
+也可以（**最好**）从【利润表】中看去看【公允价值变动损益】、【**投资收益**】去看企业投资理财情况
+
+**公允价值变动损益**反映的是企业在持有交易性金融资产期间，有没有赚到钱；
+
+**投资收益**反映的是企业将交易性金融资产卖出后，赚了多少钱；
+
+<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220714160852934.png" alt="image-20220714160852934" style="zoom:50%;margin-left:-2px" />
+
+净利润现金含量  = 经营活动产生的现金流量金额 / 净利润
+
+##### 贵州茅台怎么搞钱？
+
+* 卖酒
+* 通过财务公司提高资金使用效率
+* 投资理财
+* 使用更多的经营性负债
+
+
+
+交易性金融资产属于流动资产，持有不超过一年
+
+公允价值变动损益投资收益
+
+
+
+写作业：
+
+<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220714164305951.png" alt="image-20220714164305951" style="zoom:50%;" />
+
+
+
+![image-20220714164607011](/Users/yangli/Library/Application Support/typora-user-images/image-20220714164607011.png)
+
+![image-20220714164556379](/Users/yangli/Library/Application Support/typora-user-images/image-20220714164556379.png)
