--- a/business/company/科沃斯.md
+++ b/business/company/科沃斯.md
@@ -24,6 +24,26 @@
 
 
 
+201万台 2022年上半年扫地机器人销量（奥维云网）
+
+
+
+
+
+### 对外投资
+
+凯航电机
+
+
+
+
+
+### 全资子公司
+
+氪见科技
+
+
+
 当下业绩增速而论，去评估企业未来增长
 
 ![image-20220509155827256](/Users/yangli/Library/Application Support/typora-user-images/image-20220509155827256.png)
