--- a/business/学习财报/小北读财报.md
+++ b/business/学习财报/小北读财报.md
@@ -66,7 +66,7 @@
 
 **投资收益**反映的是企业将交易性金融资产卖出后，赚了多少钱；
 
-<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220714160852934.png" alt="image-20220714160852934" style="zoom:50%;margin-left:-2px" />
+<img src="/Users/yangli/Projects/note/rey-note/image-20220714160852934.png" alt="image-20220714160852934" style="zoom:50%;margin-left:-2px" />
 
 净利润现金含量  = 经营活动产生的现金流量金额 / 净利润
 
@@ -85,12 +85,68 @@
 
 
 
-写作业：
+写作业
 
-<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220714164305951.png" alt="image-20220714164305951" style="zoom:50%;" />
+第一阶段：整理数据
+
+第二阶段：提出问题
+
+第三阶段：综合分析，了解企业
 
 
 
-![image-20220714164607011](/Users/yangli/Library/Application Support/typora-user-images/image-20220714164607011.png)
 
-![image-20220714164556379](/Users/yangli/Library/Application Support/typora-user-images/image-20220714164556379.png)
+
+
+
+《产业分析的课》
+
+
+
+
+
+### 长期股权投资
+
+特点：
+
+* 长期性（一年以上）
+
+* 金额比较大
+
+* 风险性
+
+
+
+### 其他应收款
+
+
+
+### 在建工程
+
+折现率：货币是有时间价值的，今年的钱比明年的钱更值钱。我们要考虑明年的100块钱在今天值多少钱，两者的换算比率就是折现率
+
+### 无形资产
+
+最明显的特征是没有实物形态，但是它也能给企业带来经济利益，比如说专利权、著作权、商标权、特许经营权、土地使用权和非专利技术等
+
+固定资产叫折旧，无形资产叫摊销
+
+波特五力模型
+
+看无形资产的回报率，评估无形资产的质量，无形资产的摊销
+
+![image-20220715181705353](/Users/yangli/Library/Application Support/typora-user-images/image-20220715181705353.png)
+
+
+
+### 商誉
+
+商誉是资产负债表 下 非流动资产下的科目
+
+非标审计意见 —— 会计事务所都保证不了报表的真实性了
+
+应收账款比较多的企业要着重分析一下 —— 金正大、长虹
+
+
+
+![image-20220719173143044](/Users/yangli/Library/Application Support/typora-user-images/image-20220719173143044.png)
