--- a/business/company/科沃斯.md
+++ b/business/company/科沃斯.md
@@ -12,6 +12,10 @@
 
 
 
+
+
+
+
 股票卖出三个基本原则：
 
 1、企业基本面恶化
@@ -61,3 +65,19 @@
 
 
 ![image-20220509172603431](/Users/yangli/Library/Application Support/typora-user-images/image-20220509172603431.png)
+
+
+
+
+
+看钱总的微博：
+
+```
+巿场营销的主体必须企业自己而不是第三方策划公司，因为只有企业自已才能真正明白自己的魂是什么？自己的核心价值在哪里。而第三方策划公司只能是一根拐杖。如果不是这样，那就煮成了一锅夹生饭。 
+```
+
+
+
+
+
+钱总：物理让我脚踏实地，哲学让我仰望星空。
