--- a/business/传记/朱镕基传.md
+++ b/business/传记/朱镕基传.md
@@ -1,35 +1,19 @@
 中国模式的主题牢固地建立在实用主义的基础之上的
-
-
-
 朱镕基的想法：开放浦东，不同于深圳制造业和工业，浦东更多是开放金融、贸易和基础设施。
 
-
-
 这句话含沙射影了，哈哈
-
-<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220826154035623.png" alt="image-20220826154035623" style="zoom:50%;margin-left:-2px" />
-
-
+``` 朱镕基在美国举行的新闻发布会上说：“刚才在克林顿总统办公室看到了林肯总统的肖像。我想当年林肯总统为了保持美国的完整，反对独立和分离，不惜使用武力，我们应该向林肯总统学习。”
 
 一次”右派“、一次文化大革命  都打到农村喂猪，打扫猪圈。太难了。
 
-
-
 治理的时间线：
-
-<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220826160543668.png" alt="image-20220826160543668" style="zoom:50%;margin-left:-2px" />
-
+``` 解决中国复杂的三角债（在1992年-1992年执行），控制通货膨胀（1993年-1996年），软着陆和增长管理（1994-2000年），亚洲金融危机（1997-2000年）
 
 
 把这些政策放到经济发展理论新框架的语境中，”**受管理的市场化**“模式最能解释这些政策，也最好理解。
-
 中国人消费是群众性的，其结果是市场充斥着过剩商品
 
-
-
 朱氏市场化经济学的框架：
-
 * 控制货币发行
 * 禁止违章拆借资金
 * 灵活运用利率杠杆
@@ -47,14 +31,76 @@
 * 价格控制
 * 控制购买力
 
-
-
 交叉的货币政策包括一下几点：
-
 * 紧缩信贷，减少货币流通
 * 加强银行准备金，控制货币增长
 * 增加外汇储备，稳定汇率
-
 ​		为香港回归做准备
-
 * 贷款发放最优化
+
+在20世纪90年代初，国有企业陷入了可以互相偿还的交叉债务的困境中，当时称之为”三角债“
+朱镕基“信号经济学” - 杀鸡给猴看
+
+1996年 - 1998年的25个月中，利率被削减了六次
+据保守估计，到1997年，中国银行贷款的20%被认为是”坏账“
+信达在大约一年的时间内，从中国建设银行的资产表中购买了价值大约3000亿元的坏账
+
+按照中国的法律，银行不能成为企业的股东
+银行的坏账 -> 银行建立的资产管理公司
+
+1993年 朱镕基开始宏观调控，通过减少贷款和货币供应量来抑制失控的通货膨胀
+国外新闻：”多谢它的巨额外汇储备，相对少的短期债务和对资本流动的控制，中国至今躲过了经济危机的最坏结果。“
+不能再允许国际信托投资公司从事银行业务，关闭更多的国际信托公司已清楚可见，是朱镕基决定关闭的。
+王岐山：”地方政府没有能力开设金融机构，它用财政预算偿还金融风险“
+人们太容易忘记朱镕基是一个坚定的湖南人，他来自长沙，毛泽东的家乡，革命的温床。强硬的决定和管理12.5亿人民生活的经济转型的经验，这些是朱镕基的经济学基础，它不是建立在理论上或书本上的。
+
+原来很多年前就有刺激国内消费之说，消费内循环
+戴相龙：1999年中国外汇和外汇管理的两个任务：
+保持人民币稳定极为重要。如果人民币卞之琳，就会影响外国对中国的信心，增加中国的债务负担
+98年金融危机，在所有亚洲国家中，只有马来西亚和中国表现良好，并在危机过后更为强大
+所谓的新经济世界秩序是由发达国家设计的，不是发展中国家设计的
+
+中国如何度过亚洲金融危机
+朱镕基：因为我们采用了积极的财政扩张政策，稳健的货币政策和产业重组政策
+
+
+1949 - 1999年中国经济发展的三个截然不同的阶段：
+* 商品短缺
+* 非理性投资
+* 摆阔消费
+
+在不确定的转型环境中，个人消费与个人投资都不是工人优先考虑的事情。降息实际上并不能改变这种气氛。
+朱镕基的乐观预测部分基于他能同时使用行政计划工具和市场干预工具
+
+“休克疗法”的支持者和“华盛顿共识”要求所有转型经济都追随一个模式，即立刻私有化。而朱镕基模式则要求一同哺育私营经济和国有部门，不因为偏袒一个而完全牺牲另一个。
+“十五”计划的日程传达的信息很明确：时代的潮流是宏观调控政策，而不是国家计划。中国从陈旧的国家计划经济和指令经济的阴影中走了出来，进入了受管理的市场的新时代。
+
+**控制货币供应量是管理新兴市场经济的关键工具之一**
+“三个到位” —— 改革银行和金融体制、国有企业扭亏、精简政府官僚机构
+
+朱镕基把他的改革计划描述成“一个确保”、“三个到位”和”五项改革“
+”一个确保“ 实际上是”三个确保“的组合，目的是保护中国免受亚洲金融危机的毁灭性后果。这三个要素的第一个是要求确保当年中国的经济发展速度达到8%，第二个是通货膨胀率小于3%，第三个是人民币不能贬值。
+”三个到位“是朱镕基政府追求的目标。它们都保持了一个模式，对官僚们私加了自上而下的压力，”三个到位“的第一个是彻底改革中国的金融系统，中央银行强化监管，商业银行自主经营；第二个是设立了极高的目标，要使大多数国有大中型企亏损企业摆脱困境，进而建立”现代企业制度“；第三个是把中国的部委和臃肿的官僚机构减一半。
+”五项改革“包括一揽子相互联系的社会福利改革和财政改革。五项的内容是粮食流通值改革、住房制度改革、医疗制度改革、财政税收改革和投资融资体制的改革。
+
+### 金融改革
+中信和光大，分别属于中国国际信托投资公司和中国光大集团 —— 两个由国务院直接建立和管辖的部级公司，中信和光大的创立者分别是两个几近于传说的红色资本家：荣毅仁和王光英
+共产主义制度的传统精髓是公有制，要求清算私有财产。这就是为什么在共产党统治的中国，私营经济长期以来一直是敏感问题的原因。
+
+朱镕基 - 学习韩国企业大财团模式失败
+民企与马克思主义有冲突  => 中国特色社会主义、社会主义初级阶段
+
+朱镕基表达他的挫折感：必要的改革措施被自私自利的官员和企业经理滥用
+
+
+### 精简政府机构
+### 房改
+    借款人的资产负债率将是贷款审批程序中的重要考虑因素
+### 资本流通
+    法律上允许私营企业在中国资本市场上市
+    允许使用受管控的开放式基金作为从公众那里集资的工具，还邀请外国投资银行参与其中
+### 朱镕基访美
+    关于贸易逆差：
+        中国对美国的许多出口经过第三国，增加了这些出口商品的价值。石广生指出：中国的许多出口商品实际上是由美国投资的工厂生产的。
+        
+龙永图：“全世界没有一个国家采取完全的市场经济”
