--- a/business/要读的书/1.md
+++ b/business/要读的书/1.md
@@ -1,155 +1,89 @@
 投资：
-
 《追寻价值之路》
-
 《涛动周期两部曲》
-
 《逃不开的经济周期》
-
 《大败局》     吴晓波
-
 《估值逻辑 中国的繁荣》
-
 《买入、持有、富有》
-
 《中国资本市场：第三种模式》
-
 《资本回报  穿越资本周期的投资》
-
 《资本主义、社会主义与民主》 约瑟夫熊彼特
-
-《投资中国》 王国斌
-
 《股市长线法宝》
+
+```
+《投资中国》 王国斌 (已读)
+```
+
+
 
 
 
 商业
-
 《正向盈利》
-
 《为什么是中国》  金一南
-
 《3G资本帝国》
-
 《分析与思考》
-
 《伟大的博弈》
-
 《文明的冲突 + 文明的冲突与世界秩序的重建》
-
 《精英的傲慢》
-
 《大癫狂：群体性狂热与泡沫经济》
-
 《经济发展理论》 约瑟夫 熊彼特
-
 《经济增长理论》 阿瑟 刘易斯
-
 《只有偏执狂才能生存》 安迪格鲁夫
-
 《在不确定的世界：从华尔街到华盛顿》 鲁宾
-
 《重新定义公司：谷歌是如何运行的》
-
 《结构性改革》 黄奇帆
-
 《企业即算法》 王亚军
-
 《纳瓦尔宝典：财富和幸福指南》
-
 《投资存亡战》 杰拉德罗布
-
 《疯狂、惊恐和崩溃：金融危机史》
 
 
 
 《城市的胜利》
-
 《刷新》 纳德拉
-
 《三星内幕》
-
 《失去的二十年》
-
 《指数型组织》
-
 《人类简史》
-
 《散户至上》
-
 《投资最重要的事》
-
 《来自竞争的繁荣》  路德维希艾哈德
-
 《投资革命》 肖风
-
 《从一到无穷大》
-
 《技术元素》 KK
-
 《技术的本质》
-
 《货币的非国家化》
-
 《聚联网》
-
 《共同基金常识》
-
 《从0到1》
-
 《资本回报》
-
 《长线》美国资本集团公司成功之道
-
 《维基经济学》
-
 《宏观维基经济学》
-
 《移动浪潮》
-
 《Google将带来什么》
-
 《大癫狂》
-
 《动物精神》
-
 《棉花糖实验》 —— 育儿
-
 《专业投机原理》
-
 《魔鬼经济学》
-
 《经济学的思维方式》
-
 《伦理之业》、《天降之任》 马克思*韦伯
-
 《来自竞争的繁荣》
-
 《生活是美好的》 契科夫
-
 《创业无畏》
-
 《指数型组织》
-
 《必然》  逻辑思维推荐 凯文凯利
-
 《科学革命的结构》
 
 《如果巴西下雨就买星巴克的股票》
-
 《贼巢》
-
 《从800W到200亿》 老虎基金
 
 
-
-
-
 《被遗忘的萧条》 詹姆斯格兰特
-
 《约翰-聂夫的成功投资》
-
 《量价分析》
 
 
@@ -157,40 +91,28 @@
 
 
 芒格的关于”论学院派经济学“
-
 三本书：
 《大停滞》
-
 《智慧社会》
-
 《断点》
 
 
 
 小说：
-
 《海边的卡夫卡》  村上春树
-
 《静静的顿河》
-
 《爱的流放地》
-
 《日瓦戈医生》
-
 《白鲸》
-
 《我是个怪圈 人类意识可以被复制吗》
-
 《茶馆之殇》
-
 《秋园》
-
 《叫魂》
+《教堂司事》 毛姆
 
 
 
 传记：
-
 《朱镕基传》 龙安志
 
 
@@ -200,9 +122,7 @@
 
 
 经济学领域有著名的“三论”即《国富论》（亚当·斯密）、《资本论》（卡尔·马克思）、《通论》（凯恩思）；证券投资市场亦有“三论”即《道氏理论》、《江恩理论》和《波浪理论》
-
 安东尼波顿的书
-
 郭振华的《保险公司经营分析：基于财务报告》
 
 
@@ -210,9 +130,7 @@
 
 
 杜维明 新儒家思想
-
 恒瑞为首的风尘四侠，恒瑞，齐鲁，天晴，石药。
-
 格力电器  跟 全国商品房竣工面积有关
 
 
@@ -240,13 +158,86 @@
 
 
 《创新与企业家精神》
-
 《时间与自由意志》 柏格森
-
 《身份的焦虑》 
 
 
 
 《艳阳天》
-
 《红霞》
+《置身事内：中国政府与经济发展》 兰小欢
+《影响力》 罗伯特西奥迪
+《巴芒演义》 唐朝
+《商业性质概论》 康迪隆
+《通往成功的交易心理学》
+
+
+《人口大逆转》
+《绿色经济学》
+《引爆点》
+
+
+
+《扔掉书本上街去》
+《西潮》 蒋梦麟
+《一个企业的信念》
+
+
+
+杰克特劳特的书
+
+
+
+
+
+《反焦虑》
+《给内心的小孩找个家》
+《大明王朝1566》 刘和平  
+
+
+
+
+
+
+
+金融危机的书：
+《峭壁边缘：拯救世界金融之路》 保尔森
+《行动的勇气：金融危机及其余波回忆录》 伯南克
+《大空头》 刘易斯
+《非理性繁荣与金融危机》 希勒
+
+
+
+
+
+《坚定不移》
+《这个世界会好吗？》
+《成长股投资之父普莱斯：美国普信集团创办人的传奇人生与投资智慧》（台版）
+
+
+
+
+
+《人间指南》
+《曾文正公嘉言钞》
+《随机生存的智慧》 塔勒布
+
+
+
+《尼安德特人》
+《人类起源的故事》
+《系统之美》
+《大西洋的故事》
+《金融的本质》
+
+
+《持续进化》 何加盐
+
+
+朱镕基读卢梭的书，关于人权
+《社会契约论》
+《爱弥儿》
+《忏悔录》
+
+
+创始人施振荣最早的两本书《宏碁的世纪变革》《再造宏碁》质量很高
