--- a/基础/DB/知识点/日常.md
+++ b/基础/DB/知识点/日常.md
@@ -1,17 +1,15 @@
 Mysql中的delete、truncate、drop的区别
-
 * delete 
-
   并不是真正的删除，只是对数据做了一个标记。是DML（Data Manipulation Language）语句
-
   删除过后的数据并不会重置自增列序号id
-
 * truncate
-
 ​		只能删除所有的行数据，是DDL（Data Definition Language）语句
-
 ​		重置自增序号id
-
 * drop
-
 ​		把整张表的行数据和表结构一起删除掉
+
+
+
+Mysql中的UndoLog
+undo log是一种用于撤销回退的日志，在事务没提交之前，Mysql会先记录更新前的数据到undo log日志文件里面，当事务回滚时或者数据库崩溃时，可以利用undo log来进行回退
+
