--- a/基础/JAVA/基础.md
+++ b/基础/JAVA/基础.md
@@ -1,29 +1,22 @@
 面向对象特征：
-
 * 封装
-
 ​		减少耦合、有效地调节性能（可以通过剖析确定哪些模块影响了系统性能）
-
 * 继承
-
 ​		父类引用子类的对象称为 <strong>向上转型</strong>
-
 * 多态（编译时多态和运行时多态）
-
 ​		编译时多态主要是指方法的重载
-
 ​		运行时多态指程序中定义的对象引用所指向的具体类型在运行期间才确定
 
-
-
 a  = a + b 与 a += b的区别
+i++、++i 都是表达式
+他们的值不同：i++的值等于i，++i的值等于i+1
+他们的副作用相同：都是改变i的值，让i的值变成了i+1
 
 +=隐式的将加操作的结果类型强制转换为持有结果的类型
 
 
 
 注解：
-
 * Java自带的标准注解
 * 元注解：用于定义注解的注解，包括@Retention、@Target、@Inherted、@Documented
   * @Retention 用于标明注解被保留的阶段
@@ -33,15 +26,30 @@ a  = a + b 与 a += b的区别
 * 自定义注解
 
 
+用Optional表达“没有值”
+当你定义一个方法时，如果它可能返回null，那就要把返回类型定义为Optional<Xxx>
+Tips:
+一般私有方法可以返回null，但公有方法不能返回null；如果返回类型是集合类，如果结果为空，要返回空集合，而不是返回null
+
+
+
+解决并发问题的框架：
+不共享
+  ThreadLocal
+不修改
+  1.CopyOnWrite
+  2.java.lang.String
+建立一套协调机制
+  1.各种锁
+    自旋锁、公平锁、内置锁、可重入锁等
+  2.Java Memory Model
+    基于happens-before建立起一套协调机制
 
 
 
 反射：
-
 Java反射机制是运行状态中，对于任何一个类，都能够知道这个类的所有属性和方法；
-
 SPI机制：
-
 JDK内置的一种 服务提供发现机制
 
 
