--- a/business/传记/朱镕基传.md
+++ b/business/传记/朱镕基传.md
@@ -2,12 +2,13 @@
 朱镕基的想法：开放浦东，不同于深圳制造业和工业，浦东更多是开放金融、贸易和基础设施。
 
 这句话含沙射影了，哈哈
-``` 朱镕基在美国举行的新闻发布会上说：“刚才在克林顿总统办公室看到了林肯总统的肖像。我想当年林肯总统为了保持美国的完整，反对独立和分离，不惜使用武力，我们应该向林肯总统学习。”
+【朱镕基在美国举行的新闻发布会上说：“刚才在克林顿总统办公室看到了林肯总统的肖像。我想当年林肯总统为了保持美国的完整，反对独立和分离，不惜使用武力，我们应该向林肯总统学习。”】
+
 
 一次”右派“、一次文化大革命  都打到农村喂猪，打扫猪圈。太难了。
 
 治理的时间线：
-``` 解决中国复杂的三角债（在1992年-1992年执行），控制通货膨胀（1993年-1996年），软着陆和增长管理（1994-2000年），亚洲金融危机（1997-2000年）
+【解决中国复杂的三角债（在1992年-1992年执行），控制通货膨胀（1993年-1996年），软着陆和增长管理（1994-2000年），亚洲金融危机（1997-2000年）】
 
 
 把这些政策放到经济发展理论新框架的语境中，”**受管理的市场化**“模式最能解释这些政策，也最好理解。
@@ -102,5 +103,5 @@
 ### 朱镕基访美
     关于贸易逆差：
         中国对美国的许多出口经过第三国，增加了这些出口商品的价值。石广生指出：中国的许多出口商品实际上是由美国投资的工厂生产的。
-        
+
 龙永图：“全世界没有一个国家采取完全的市场经济”
