--- a/business/要读的书/1.md
+++ b/business/要读的书/1.md
@@ -10,9 +10,9 @@
 《资本主义、社会主义与民主》 约瑟夫熊彼特
 《股市长线法宝》
 
-```
-《投资中国》 王国斌 (已读)
-```
+
+##### 《投资中国》 王国斌 (已读)
+
 
 
 
@@ -106,14 +106,15 @@
 《白鲸》
 《我是个怪圈 人类意识可以被复制吗》
 《茶馆之殇》
-《秋园》
+《秋园》  杨本芬
 《叫魂》
 《教堂司事》 毛姆
 
 
 
 传记：
-《朱镕基传》 龙安志
+##### 《朱镕基传》 龙安志（已读）
+
 
 
 
@@ -241,3 +242,23 @@
 
 
 创始人施振荣最早的两本书《宏碁的世纪变革》《再造宏碁》质量很高
+沙姆纲要系列是美国经典学习指导系列丛书，帮助高中生预习大学课程
+弗里德曼和施瓦茨的著作 - 关于大萧条
+
+
+《如何高效学习：1年完成麻省理工》
+《伦巴第街》 沃尔特白芝浩
+《全球化与国家竞争》 温铁军
+《我的经验与教训》  苏世民
+《价值：公司金融的四大基石》 蒂姆科勒
+《大航海时代》 欧洲历史
+
+《次贷危机：美国最新的繁荣与萧条》 爱德华格拉姆利克
+
+
+#让你逢人便推的高质量小说# 《红楼梦》、余华《活着》、张爱玲《倾城之恋》、紫金陈《长夜难明》…… ​​​
+
+
+《全球股市启示录》
+《十年轮回》 沈联涛
+《更富有更睿智更快乐》
