--- a/基础/分布式/分布式事务.md
+++ b/基础/分布式/分布式事务.md
@@ -1,10 +1,15 @@
 * XA
+    是X/Open提出的分布式事务处理规范。XA是数据库的分布式事务，强一致性。
 * SAGA
 ​		理论：长事务分拆成多个子事务。子事务正向操作Ti，子事务反向补偿操作Ci  
 
 TCC
 本地消息表
+    ebay提出
+    需要将分布式处理的任务通过消息日志的方式来异步执行。消息日志可以存储到本地文本、数据库或消息队列，再通过业务规则自动或人工发起重试。人工重试更多是应用于支付场景，通过对账系统对事后问题的处理
+    本地消息表基于base理论
 事务消息（RocketMQ4.3之后）
+    rocketmq：事务回查，最多15次
 最大努力通知
 AT事务（seata）
 
@@ -28,7 +33,8 @@ AT事务（seata）
 分布式事务处理场景:
 * 基于XA的两阶段提交协议来完成 —— 当前微服务情况下用的不是很普遍
     步骤：分成prepare、commit两步进行操作
-    缺点：异常场景不能百分百处理（prepare预提交后事务协调器宕机，造成不成回滚；commit操作后造成数据库死锁等）
+    缺点：异常场景不能百分百处理（prepare预提交后事务协调器宕机，造成不能回滚；commit操作后造成数据库死锁等）
+    rocketmq官方说的缺点：多分支环境下资源锁定范围大，并发度低，随着下游分支的增加，系统性能越来越差
 * 基于弱一致性的事务补偿
     对于任何一个webservice接口，都要写一个逆向的接口进行回滚，调逆向接口进行正向数据的回滚，正向接口和负向接口都要具备幂等性
 * 基于BASE理论的事务最终一致性(当前很常用的处理方式)
@@ -68,8 +74,12 @@ TCC模式，不依赖于底层数据资源的事务支持：
     2)二阶段commit行为，调用自定义的commit逻辑
     3)二阶段rollback行为，调用自定义的rollback逻辑
 所谓TCC模式，是指支持把自定义的分支事务纳入到全局事务的管理中
+    适用范围：
+    1)强隔离性、严格一致性要求的业务活动
+    2)适用于执行时间比较短的业务
 
 SAGA模式
+    最终一致性解决方案
     SEATA提供的长事务解决方案，在SAGA模式中，业务流程中每个参与者都提交本地事务，当出现某一个参与者失败则补偿前面已经成功的参与者，一阶段正向服务和二阶段补偿服务都由业务开发实现
     适用场景：
         1)业务流程长，业务流程多
