--- a/business/传记/王石.md
+++ b/business/传记/王石.md
@@ -3,23 +3,18 @@
 
 
 司汤达的《红与黑》
-
 普希金的《上尉的女儿》
-
 薄伽丘的《十日谈》
-
 但丁的《神曲》
-
 曹雪芹《红楼梦》
-
 狄更斯《大卫科波菲尔》
 
 
-
 音乐：
-
 威瓦尔第的《四季》
-
 德沃夏克的《新大陆》
-
 莫扎特的《弥撒曲》
+
+
+王石：我决定今后公司在做项目评估之时，不但要看利润回报，还要看管理资源能不能跟得上，如果管理资源上不去，就绝不勉强上马。
+公司想要持续发展，必须确定一个合理的回报率水平。理论上，随着竞争的加剧以及政策的调整，市场必然向社会平均利润率回归。万科提出这一回报率原则，正是基于对社会平均利润率的判断，规避了高风险，加强公司适应经济周期的能力，培养了公司的竞争力。
