--- a/business/传记/雷军.md
+++ b/business/传记/雷军.md
@@ -37,3 +37,13 @@
 
 
 如果智能电动汽车“消费电子化”，那么就必然会遵从消费电子行业的规律，当15-20年后进入成熟期，全球前5的品牌必将手握80%以上的份额。也就是说，只有最终进入全球行业前5，做到年出货1000万台以上才有意义。这将是极其残酷的竞争。
+
+
+
+
+2011-2014年
+小米这3年做的事情，真正学习的是这几家公司：同仁堂、海底捞、沃尔玛和Costco。像同仁堂一样做产品，货真价实，有信仰；
+向海底捞学用户服务，做超预期的口碑；向沃尔玛、Costco这样的公司学运作效率。
+
+
+
