--- a/business/要读的书/1.md
+++ b/business/要读的书/1.md
@@ -176,9 +176,6 @@
 《人口大逆转》
 《绿色经济学》
 《引爆点》
-
-
-
 《扔掉书本上街去》
 《西潮》 蒋梦麟
 《一个企业的信念》
@@ -262,3 +259,47 @@
 《全球股市启示录》
 《十年轮回》 沈联涛
 《更富有更睿智更快乐》
+
+《天国止痒》
+《计算机体系结构 量化研究方法》
+
+
+《双城记》
+《卖桔者说》 张五常
+
+
+费孝通学术经典套装
+《论美国的民主》
+《自由与繁荣的国度》
+
+《客厅里的绅士》 毛姆
+
+
+《之江新语》
+《日本的共同富裕之道》
+《双重冲击》
+
+
+政治经济学
+《通往奴役之路》 
+《战略与路径》 黄奇帆
+《历史的终结与最后的人》 
+
+
+
+《反脆弱》
+《估值与故事》
+
+
+
+了解亚马逊
+《亚马逊编年史》
+《贝索斯传》
+
+
+《巴菲特传》、《光荣与梦想》、《伟大的博弈》
+《狂人分子》埃里克霍弗
+
+
+《深度分销方式》
+《长期有耐心 - 美团的成长与进化逻辑》
