--- a/基础/读书/思考书/人月神话.md
+++ b/基础/读书/思考书/人月神话.md
@@ -1,7 +1,5 @@
 ### Chapter1：焦油坑
-
 学习编程最困难的部分，是将做事的方式向追求完美的方向调整
-
 我们所面临的挑战和任务是在实际的进度和有效的资源范围内，寻找解决实际问题的切实可行的方案
 
 
@@ -9,37 +7,24 @@
 
 
 ### Chapter2：人月神话
-
 持续的估算工作进度
-
-
-
 人月 估算项目时间的计量方式：
-
 * 对于无法分解的任务：随着人数的增加，月份值变动也无变化
-
 * 对于可以分解的任务：
-
 * 对于关系错综复杂的任务：
 
 
 
 对于软件任务的进度安排，作者的经验：
-
 1/3 计划
-
 1/6 编码
-
 1/4 构建测试和早期系统测试
-
 1/4 系统测试，所有的构件已完成
-
 在早期的进度策划时，允许充分的系统测试时间是非常重要的。
 
 
 
 出于软件经理对于项目进程的分析，如果没有过程管理的支持，很难生产出健壮可靠和规避风险的估计。
-
 过程中推行生产率图表、缺陷率、估算规则等等（相当于禅道了...）
 
 
@@ -53,10 +38,66 @@
 
 
 ### Chapter3：外科手术队伍
-
 团队人员结构和分配相关
+实验：最好和最差的程序员的差异
+    在生产率上平均为10:1
+    在运行速度和空间上5:1
+
+小型、精干队伍概念上的问题：对于真正意义上的大型系统，它太慢了。
+
+对于效率和概念的完整性来说，最好由少数干练的人员来设计和开发，而对于大型系统，则需要大量的人手，以使产品能在时间上满足要求。如何协调这两方面的矛盾呢？
+我的理解：大型系统拆分，分为核心功能和边缘功能。 
+
+mmills的建议：
+1.传统的团队将工作进行划分，每人负责一部分工作的设计和实现
+在外科手术团队中，外科医生和副手都了解所有的设计和全部的代码，这节省了空间分配、磁盘访问等劳动量，同时也确保了工作概念上的完整性
+2.观点的一致，观点的不一致由外科医生单独来统一
 
 ### Chapter4：贵族专制、民主政治和系统设计
+有点没看懂
 
 ### Chapter5：画蛇添足
+一种普遍倾向是过分地设计第二个系统，向系统添加很多修饰功能和想法。
+项目经理如何避免画蛇添足？ 他必须坚持至少拥有两个系统以上开发经验结构师的决定。同时保持对特殊诱惑的警觉，他可以不断提出问题，确保原则上的概念和目标在详细设计中得到完整的体现。
 
+
+### Chapter6：贯彻执行（Passing the World）
+手册
+会议和大会：周例会和年度大会
+
+
+### Chapter7：为什么巴比伦塔会失败（ did the tower of Babel fail?）
+失败的原因：
+    交流
+    组织
+
+编程人员仅了解自己负责的部分，而不是整个系统的开发细节时，工作效率最高。这种方法的先决条件是精确和完整地定义所有接口。
+
+对于真正大型项目中的一些开发队伍，我认为产品负责人作为管理者是更合适的安排。
+交流和组织的技能需要管理者仔细考虑，相关经验的积累和能力的提高同软件技术本身一样重要。
+
+
+### Chapter8：胸有成竹（ calling the shot）
+使用适当的高级语言，编程的生产率可以提高5倍
+
+
+### Chapter9：削足适履（Ten pounds in a five-pound sack）
+数据的表现形式是编程的根本
+
+
+### Chapter10：提纲（The documentary hypothesis）
+### Chapter11：未雨绸缪（Plan to throw one away）
+
+### Chapter12：干将莫邪（Sharp tool）
+### Chapter13：整体部分（The whole and the Parts）
+### Chapter14：祸起萧墙（Hatching a Catastrophe）
+里程碑只有一个原则：那就是，里程碑必须是具体的、特定的、可度量的事件，能够进行清晰的定义
+地毯的下面：
+    减少角色冲突
+    
+### Chapter15：另外一面（The other face）
+
+自文档化，其实就是代码见名知意等一些规范
+
+提高效率：
+高级语言
