--- a/business/行动的勇气.md
+++ b/business/行动的勇气.md
@@ -35,3 +35,8 @@
 
 
 房价上涨过程中，至少有一部分原因在于居民收入增加、房贷利率较低等经济基本面的因素
+连续15次加息0.25个百分点。能源价格上升，让美联储有点担心通货膨胀问题
+
+保罗 麦卡利 【影子银行】：包括非银行类房贷机构（抵押贷款公司和消费金融公司），以及在证券市场运作的公司（比如投行）
+白芝浩提出的“最后贷款人”这一概念认为，银行应当在金融恐慌时期慷慨放给那些经营稳健、拥有优质抵押品的公司，从而促进金融机构和市场的稳定
+美联储每次面临资产价格暴跌就倾向于通过降息来为市场提供流动性，后来称之为格林斯潘卖权（Greenspan put），所谓卖权（put），是一种保护买家在股票或其他证券价格下跌之际免遭损失的期权合约。
