--- a/基础/分布式/分布式事务.md
+++ b/基础/分布式/分布式事务.md
@@ -1,3 +1,31 @@
+事务：
+    什么是事务？
+        事务是数据库中一个单独的执行单元，事务就是由一种数据操纵语言DML(Data Manipulation Language)语句组成，这一组DML要么全部成功要么全部失败
+
+    事务的隔离级别
+        读未提交
+        读已提交
+        可重复读
+        可串行化
+
+    无隔离性问题
+        脏读
+        不可重复读
+            在一个事务内，多次读同一数据。在这个事务还没有结束时，另外一个事务也访问该同一数据。那么，在第一个事务中的两次读数据之间，由于第二个事务的修改，那么第一个事务两次读到的数据可能是不一样的。这样就发生了在一个事务内两次读到的数据是不一样的，因此称为不可重复读（即不能读到相同的数据内容）
+            不可重复读的重点是修改：同样的条件，你读取过的数据，再次读取出来发现值不一样了
+        幻读
+            事务不是独立执行时发生的一种现象，例如第一个事务对一个表中的数据进行了修改，这种修改涉及到表中全部数据行。同时，第二个事务也修改了表中的数据，这种修改是向表中的插入一行新数据。那么，第一个事务的用户发现表中还有没有修改的数据行，就好像发生了幻觉一样
+            幻读的重点在于新增或者删除：同样的条件，第1次和第2次读出来的记录数不一样
+
+            隔离级别 | 脏读    | 不可重复读 | 幻读
+            未提交读 | 可能    | 可能      | 可能
+            已提交读 | 不可能   | 可能     | 可能
+            可重复读 | 不可能   | 不可能    | 可能
+            可串行化 | 不可能   | 不可能    | 不可能
+        
+    MYSQL：update的时候，InnoDB实现的是write-committed repeatable，不是基于场景的snapshot isolation的实现，write操作是直接读取已提交的最新版本的数据，而不是snapshot中的数据。
+    但是Innodb的实现则在修改rec1的时候，如果trx1已经提交了，那么直接读trx1 committed的结果，这样就可以避免了让trx2重试的过程了，也可以达到几乎一样的效果。当然这样带来的后果是Mysql的repeatable read实现是不能规避Lost update情况发生的
+
 * XA
     是X/Open提出的分布式事务处理规范。XA是数据库的分布式事务，强一致性。
 * SAGA
