--- a/business/company/亚马逊.md
+++ b/business/company/亚马逊.md
@@ -78,3 +78,30 @@ Amazon成立
 
 
 # 2002年
+亚马逊履行中心的软件重写基本完成，大部分商品从下单到发货的时间最快可以缩短到4小时
+# 2003年
+盈利
+技术提出 将虚拟服务的访问权作为一种服务进行出售的可能性，并提出亚马逊可以从新的基础设施投资中获得收入
+
+# 2004年
+# 2005年
+你必须用心和直觉，要承担风险，所有好的决定都是这么做出来的
+# 2006年
+
+# 2007年
+亚马逊鼓励创新的公司文化，列举了近年来几项重要的创新举动，并认为这是亚马逊的竞争优势之根源
+kindle面世
+
+# 2008年
+股东信：贝索斯第一次将开头对股东的称谓从"shareholders"（股份持有者）改成"shareowners"(股份的所有者)
+# 2009年
+
+# 2017年
+亚马逊真是啥都搞呀，药品也要自己研发。
+但是亚马逊本质上是零售，在大的范围内确实应该应有尽有的商品
+# 2018年
+各个巨头（亚马逊、谷歌）都在布局智能门锁
+2018年4月18日，贝索斯发布致股东信，贝索斯介绍了亚马逊取得成功的又一秘诀：高标准
+在推出Prime会员服务13年后，亚马逊在全球范围内已拥有超过1亿付费会员
+亚马逊、苹果和谷歌公司在奋力争夺智能音箱的市场份额，它们都断定消费者为了生活的便利会慢慢让渡部分日常习惯，为此都大力投资于智能家居领域
+
