--- a/business/company/亚马逊.md
+++ b/business/company/亚马逊.md
@@ -105,3 +105,19 @@ kindle面世
 在推出Prime会员服务13年后，亚马逊在全球范围内已拥有超过1亿付费会员
 亚马逊、苹果和谷歌公司在奋力争夺智能音箱的市场份额，它们都断定消费者为了生活的便利会慢慢让渡部分日常习惯，为此都大力投资于智能家居领域
 
+
+
+贝索斯致股东信：
+1.长期主义
+    一切都关于长期（It's all about the long term）
+2.客户至上
+    痴迷于客户（obsess over customers）
+3.客户体验
+4.重视员工
+5.高标准（选人）
+        
+
+坚守这些基本的商业方法。我们痴迷地探索客户需求，而不是把精力都花在竞争对手在干什么；我们要对发明创造充满热忱；我们要全心全意地追求卓越运营；我们要坚守长期主义的思考方式
+单向门和双向门，做决策的考量
+    单向门决策往往是不可逆的，在面对这种决策的时候，必须按照方法论来做，要小心谨慎，要慢慢来，要深思熟虑，要多方咨询。
+    双向门可以并且应该交由判断力比较高的个人或者小组快速做出
