--- a/business/传记/雷军.md
+++ b/business/传记/雷军.md
@@ -47,3 +47,20 @@
 
 
 
+《参与感》 黎万强
+雷总曾讲过创业成功的三个关键因素：
+    选个大市场
+    组件最优秀的团队
+    拿到花不完的钱
+
+口碑传播有三个核心：
+    发动机：产品
+    加速器：社会化媒体
+    关系链：用户关系
+    
+    “快”是第一个口碑节点
+    “好看”是第二个口碑节点
+    “开放”是第三个口碑节点
+
+    
+
