--- a/business/要读的书/1.md
+++ b/business/要读的书/1.md
@@ -293,7 +293,7 @@
 
 
 了解亚马逊
-《亚马逊编年史》
+### 《亚马逊编年史》
 《贝索斯传》
 
 
@@ -313,3 +313,26 @@
 
 《自由秩序原理》哈耶克
 《格鲁夫给经理人的第一课》
+
+《我的改变》王石
+
+
+英国 李嘉图《政治经济学及税赋原理》
+
+《格兰特将军回忆录》、《高卢战记》
+张云《品类创新》
+
+《啊哈！灵机一动》
+
+
+王慧文推荐的书
+《支付战争》
+《引爆流行》
+《精益创业》
+《创新者的窘境》
+《零售的哲学》
+《好战略、坏战略》
+
+
+
+《企业迷思：北大管理公开课》
