--- a/business/传记/张毓强.md
+++ b/business/传记/张毓强.md
@@ -1,25 +1,14 @@
 《新工业时代》
 
-
-
 巨石
-
 玻璃纤维企业 —— 年产能超过180万吨
-
 玻璃纤维是一种无机非金属新材料，它取材于生产玻璃的矿石。
-
-
-
 瑞士心理学大师荣格曾说：“一个人毕其一生的努力就是在整合他自童年时代起就已形成的性格”。
-
-
-
 一个地方的经济但凡有缝隙，就会有个人生意的发生。经济的本质是自发交换。
-
-
-
 代铂炉的技术改造，还说明企业搞技改，加强内部管理，最好是在外部市场不景气的时候。因为这时改革的成本比较低，买新设备也便宜。只要能熬下来，活下去，把能力提升了，等市场景气时，就很容易上一个大台阶。
-
-
-
 玻纤行业周期性特征明显，经济不好的时候，下游需求萎缩，玻纤需求也迅速下降，一般衰退时间为两三年。经济好转时，玻纤行业往往快速复苏，复苏和繁荣一般八到十年。同时，玻纤投资时间长，一条线最快也要一年，如果左等右等条件成熟，等机会真来了，可能赶不上了。
+
+瘦鹅理论：任何人走霉运时，要学习瘦鹅那样忍饥挨饿，锻炼自己的忍耐力，培养毅力，等待机会到来。只要饿不死，一旦机会到来，就会像瘦鹅一样，不但胃口奇佳，而且消化力特强，能迅速地强壮肥大起来。
+
+
+全球玻纤需求增速约为GDP增速的1.6倍
