--- a/business/company/亚马逊.md
+++ b/business/company/亚马逊.md
@@ -1,3 +1,4 @@
+《亚马逊编年史》
 # 1994年
 2018年9月亚马逊的市值突破万亿美元，以上市的4亿美元计算，实现2000多倍的成长
 遗憾最小化框架（regret minimization framework）：这是使重要决定简单化的思维架构：
@@ -121,3 +122,17 @@ kindle面世
 单向门和双向门，做决策的考量
     单向门决策往往是不可逆的，在面对这种决策的时候，必须按照方法论来做，要小心谨慎，要慢慢来，要深思熟虑，要多方咨询。
     双向门可以并且应该交由判断力比较高的个人或者小组快速做出
+
+
+
+
+《长期主义》
+艾萨克·阿西莫夫 和罗伯特·海因莱因 成为贝索斯最爱的科幻作家
+我们的终极财务指标，也是最想要长期推动的指标，即每股自由现金流
+亚马逊公司的财务重点，便是每股自由现金流的长期增长
+在优化财务报表的表象和最大化未来现金流的现值之间，如果非要做出选择不可，我们会选择后者
+我们在亚马逊制定的许多至关重要的决策，都可以通过数据来完成
+
+在亚马逊，所谓“单线程主人翁”（single-thread owner），指每个员工都是项目、计划、产品和服务的所有者或关键决策制定者，将想法付诸实践或继续当前创新进程的总体决策则由一个人来做。
+遇到需要制定的决策时，你必须得问清：“这是一扇单向门还是双向门？”,如果是双向门决策，那就由一个小团队或是某个决策能力很强的个人来完成。但如果是一扇单向门，那就用5种不同的方式进行分析。多加留心，因为对于这种决策而言，慢则稳，稳则快。
+单向门式决策的制定不应一蹴而就。你应该寻求共识，或至少鼓励深思熟虑、集思广益
