add recently read note

--- a/business/学习财报/小北读财报.md
+++ b/business/学习财报/小北读财报.md
@@ -1,7 +1,7 @@
+小北读财报
 ### 固定资产
 
 固定资产是指企业为生产商品、提供劳务、出租或经营管理而持有的，使用寿命超过一年的，单位价值较高的有形资产。所以固定资产至少具备3个特点：
-
 * 使用寿命超过1年
 * 单位价值较高
 * 有形资产
@@ -9,9 +9,7 @@
 
 
 ##### 如何分析固定资产？
-
 可以从四个方面入手：
-
 * 了解固定资产的规模
 * 查看固定资产的结构
 * 分析固定资产的折旧情况
@@ -35,35 +33,24 @@
 
 
 ### 投资性房地产
-
 投资性房地产价值如何计量？
-
 企业持有投资性房地产有两种后续计量方法
-
 * 成本模式计量的投资性房地产
-
   需要根据资产原值和预计使用年限，计提相应的折旧和摊销；折旧和摊销最终会反映到利润表上，减少企业的净利润
-
 * 采用公允价值模式计量的投资性房地产
-
   不需要计提折旧和摊销，使用公允价值计价的投资性房地产的价值会随时发生变化，进而产生**公允价值变动损益**，房价升了，公允价值变动损益就会增加，进而增加企业的净利润
 
 
 
 ##### 公允价值计量对财务报表有哪些影响？
-
 如果房价上涨，将会增加资产负债表的“未分配利润”，减少净利润的营业成本和费用
 
 
 
 ### 企业理财情况
-
 可以通过【资产负债表】里面的【交易性金融资产】、【投资性房地产】等了解到企业的投资理财情况
-
 也可以（**最好**）从【利润表】中看去看【公允价值变动损益】、【**投资收益**】去看企业投资理财情况
-
 **公允价值变动损益**反映的是企业在持有交易性金融资产期间，有没有赚到钱；
-
 **投资收益**反映的是企业将交易性金融资产卖出后，赚了多少钱；
 
 <img src="/Users/yangli/Projects/note/rey-note/image-20220714160852934.png" alt="image-20220714160852934" style="zoom:50%;margin-left:-2px" />
@@ -71,7 +58,6 @@
 净利润现金含量  = 经营活动产生的现金流量金额 / 净利润
 
 ##### 贵州茅台怎么搞钱？
-
 * 卖酒
 * 通过财务公司提高资金使用效率
 * 投资理财
@@ -80,72 +66,49 @@
 
 
 交易性金融资产属于流动资产，持有不超过一年
-
 公允价值变动损益投资收益
 
 
 
 写作业
-
 第一阶段：整理数据
-
 第二阶段：提出问题
-
 第三阶段：综合分析，了解企业
-
-
-
-
-
 
 
 《产业分析的课》
 
-
-
-
-
 ### 长期股权投资
-
 特点：
-
 * 长期性（一年以上）
-
 * 金额比较大
-
 * 风险性
 
 
 
 ### 其他应收款
-
-
-
 ### 在建工程
-
 折现率：货币是有时间价值的，今年的钱比明年的钱更值钱。我们要考虑明年的100块钱在今天值多少钱，两者的换算比率就是折现率
-
 ### 无形资产
-
 最明显的特征是没有实物形态，但是它也能给企业带来经济利益，比如说专利权、著作权、商标权、特许经营权、土地使用权和非专利技术等
-
 固定资产叫折旧，无形资产叫摊销
-
 波特五力模型
-
 看无形资产的回报率，评估无形资产的质量，无形资产的摊销
-
 ![image-20220715181705353](/Users/yangli/Library/Application Support/typora-user-images/image-20220715181705353.png)
 
 
 
 ### 商誉
-
 商誉是资产负债表 下 非流动资产下的科目
-
 非标审计意见 —— 会计事务所都保证不了报表的真实性了
-
 应收账款比较多的企业要着重分析一下 —— 金正大、长虹
+
+
+### 长期借款
+长期借款的时间是1年以上
+
+资产负债率 = 负债总额 / 资产总额 * 100% 。 该指标表示的是公司的负债总额占总公司的比重是多少，或者说公司的资金来源中，由债权人提供的资金占多大比重
+不受限制的货币资金才能还账（现金及现金等价物）
 
 
 
