--- a/business/要读的书/1.md
+++ b/business/要读的书/1.md
@@ -11,7 +11,7 @@
 《股市长线法宝》
 
 
-##### 《投资中国》 王国斌 (已读)
+##### 《投资中国》 王国斌
 
 
 
@@ -22,8 +22,9 @@
 《正向盈利》
 《为什么是中国》  金一南
 《3G资本帝国》
+我建议读者先读《3G资本帝国》，后读《赋能式投资》
 《分析与思考》
-《伟大的博弈》
+##### 《伟大的博弈》
 《文明的冲突 + 文明的冲突与世界秩序的重建》
 《精英的傲慢》
 《大癫狂：群体性狂热与泡沫经济》
@@ -41,7 +42,7 @@
 
 
 《城市的胜利》
-《刷新》 纳德拉
+##### 《刷新》 纳德拉
 《三星内幕》
 《失去的二十年》
 《指数型组织》
@@ -208,7 +209,7 @@
 
 
 
-《坚定不移》
+##### 《坚定不移》
 《这个世界会好吗？》
 《成长股投资之父普莱斯：美国普信集团创办人的传奇人生与投资智慧》（台版）
 
@@ -297,7 +298,7 @@
 《贝索斯传》
 
 
-《巴菲特传》、《光荣与梦想》、《伟大的博弈》
+《巴菲特传》、《光荣与梦想》
 《狂人分子》埃里克霍弗
 
 
@@ -339,3 +340,10 @@
 《终身成长：重新定义成功的思维模式》
 诺曼麦克林恩《年轻人与火》、《一江流过水悠悠》
 特雷西基德尔《新机器的灵魂》
+
+
+《拼实业》
+《我的一生略小于美国现代史》
+
+
+《时运变迁：世界货币、美国地位与人民币的未来》 
