--- a/daily/invest/20221102.md
+++ b/daily/invest/20221102.md
@@ -52,6 +52,10 @@ ps：流量是忽悠穷人的。长期来看消费者很聪明。
 
 
 
+时时在评估公司的内在价值，在中国股市评估公司始终是看增长，不增长的公司无法通过清算价值来估值，一定要看增长的公司才值得投资，不然就是输钱又输时间
+A公司 EPS：1块钱，10年后EPS：1块钱 10年后内在价值不变，输钱输时间
+B公司 EPS：1块钱，10年15%增速，23PE
+
 
 
 盛东辉
