--- a/daily/invest/20221118.md
+++ b/daily/invest/20221118.md
@@ -14,6 +14,5 @@ https://xueqiu.com/1955602780/231590723
 所以归根到底，最让人惊叹的，还是人类社会的自我纠错、寻找出路或者再平衡的能力，像人身体的免疫能力一样神奇。情绪总是在亢奋与沮丧之间摇摆；资产价格总在贵贱之间摇摆；世界格局总在全球化与孤立主义摇摆；政策总在管制与放松之间摇摆。但具体摇摆的时间与幅度，又无法准确地预测与把握。我们能做的，是在沮丧的时候保留乐观，在亢奋的时候保持警惕。
 
 
-
-我要祭奠我的母亲
-开车
+https://xueqiu.com/1955602780/85728271
+如果谁能满足人类群众永不满足的精神需要，谁就能挣大钱
