--- a/基础/DB/中间件.md
+++ b/基础/DB/中间件.md
@@ -1,2 +1,36 @@
 数据库中间件
 
+消息中间件：
+kafka
+
+消息队列主要有哪些作用：
+* 应用解耦
+* 异步处理
+* 数据限流
+* 消息通信
+
+在给应用程序设置线程数量时，遵循”线程数小于分区数“原则
+
+代理、生产者、消费者、消费者组
+主题、分区、副本、记录
+
+kafka适用的场景：日志收集、消息系统、活动跟踪、运营指标、流式处理、事件源等
+业务数据归类到主题。
+"主题"是一个逻辑概念，而"分区"则是一个物理概念
+
+分区就相当于MongoDB和Elasticsearch中的Sharding、HBase里面的Region。”生产者“可以将消息数据发送到多个代理节点上的多个分区。”消费者“也可以并行地从多个代理节点上的不同分区获取数据，实现水平扩展。
+大数据场景下，如果采用异步模式发送消息记录，几乎没有任何耗时，通过回调函数可以知道消息发送的结果。
+如果要收集用户访问网页的数据，在写数据到kafka集群代理节点时需要立即知道消息是否写入成功
+
+清理过期数据的两种方法：
+* 基于时间和大小的删除策略
+* 压缩清理策略
+
+kafka连接器
+kafka连接器分为两种：
+* Source连接器：负责将数据导入kafka系统
+* Sink连接器：负责将数据从kafka系统中导出
+
+流处理
+* 无穷数据：持续产生的数据，它们通常称为流数据
+流数据与批次数据的区别在于 —— 数据边界是否有限。
