--- a/business/3G资本帝国.md
+++ b/business/3G资本帝国.md
@@ -15,3 +15,4 @@
 
 所以观察企业，当员工收入达到一个高峰，或者热搜/新闻中出现企业可以富可敌国的情况时往往是衰退或者调整的时刻了，这时候就要格外小心，不要再买入了。
 苏格拉底相信知识存在于人们自身，因此他通过不停地问询问题来挖掘本来就存在于人们脑海中的答案。
+不断遵循他们的原则与支柱：精英治理、消减成本及不断改进
