--- a/business/传记/王石.md
+++ b/business/传记/王石.md
@@ -22,3 +22,11 @@
 董事长需要做三件事：战略、用人、担当
 
 看了王石传记后，发现自己的思维太爱受到大众认知的局限了
+
+
+
+《我的改变》
+一个成功的企业家，应该着力于建立制度，培养团队，当你不在的时候企业能运转得好
+我当时喜欢的是“走向未来”丛书，还有汤因比的《历史研究》，对现代企业制度有着深深的认同感
+当你运动时的心率达到“220减去你的年龄数”，就达到了无氧运动的标准
+哈佛的特别课程《中国古典道德与政治理论》
