--- a/business/company/百济神州.md
+++ b/business/company/百济神州.md
@@ -1,3 +1,14 @@
+靶向药
+    大分子
+        单抗【PD1/PD-L1】(注射)
+        化学结构不稳定
+        大分子多肽链
+        半衰期长
+    小分子
+        替尼(口服)
+        化学结构稳定
+        半衰期短
+
 OOR指标代表 客观缓解率，它反应的是每一次治疗评估点的疗效效果。
 缺陷：无法回答病人的整个疗效获益过程，比如延长了几个月的寿命，所以还需要其他指标补充。
 
