--- a/business/传记/王石.md
+++ b/business/传记/王石.md
@@ -4,7 +4,10 @@
 但丁的《神曲》
 曹雪芹《红楼梦》
 狄更斯《大卫科波菲尔》
+汤因比《历史研究》
+马克斯韦伯《新教伦理与资本主义精神》
 
+中学时候喜欢读书，大量阅读外国书籍，比如狄更斯、巴尔扎克、雨果、司汤达等等
 
 音乐：
 威瓦尔第的《四季》
@@ -15,6 +18,7 @@
 王石：我决定今后公司在做项目评估之时，不但要看利润回报，还要看管理资源能不能跟得上，如果管理资源上不去，就绝不勉强上马。
 公司想要持续发展，必须确定一个合理的回报率水平。理论上，随着竞争的加剧以及政策的调整，市场必然向社会平均利润率回归。万科提出这一回报率原则，正是基于对社会平均利润率的判断，规避了高风险，加强公司适应经济周期的能力，培养了公司的竞争力。
 
+选择一个行业，房地产；建立一个制度，现代企业制度；培养了一支团队；树立了一个品牌。
 
 
 《大道当然》
@@ -30,3 +34,4 @@
 我当时喜欢的是“走向未来”丛书，还有汤因比的《历史研究》，对现代企业制度有着深深的认同感
 当你运动时的心率达到“220减去你的年龄数”，就达到了无氧运动的标准
 哈佛的特别课程《中国古典道德与政治理论》
+
