--- a/business/行动的勇气.md
+++ b/business/行动的勇气.md
@@ -40,3 +40,7 @@
 保罗 麦卡利 【影子银行】：包括非银行类房贷机构（抵押贷款公司和消费金融公司），以及在证券市场运作的公司（比如投行）
 白芝浩提出的“最后贷款人”这一概念认为，银行应当在金融恐慌时期慷慨放给那些经营稳健、拥有优质抵押品的公司，从而促进金融机构和市场的稳定
 美联储每次面临资产价格暴跌就倾向于通过降息来为市场提供流动性，后来称之为格林斯潘卖权（Greenspan put），所谓卖权（put），是一种保护买家在股票或其他证券价格下跌之际免遭损失的期权合约。
+
+我们之前认为，房地产市场增速放缓和次级抵押贷款问题主要通过两个渠道影响经济：
+1.在建筑行业以及其他与房地产相关的行业（如家居用品等），就业岗位会减少。
+2.抑制消费支出（房价下跌会让业主感到自己的财富缩水，弱化了他们利用房屋净值获取融资的能力）
