--- a/business/要读的书/1.md
+++ b/business/要读的书/1.md
@@ -347,3 +347,12 @@
 
 
 《时运变迁：世界货币、美国地位与人民币的未来》 
+
+
+证星研究院推荐：
+《美国四百年》布·斯里尼瓦桑
+《巴菲特的护城河》  作者：帕特·多尔西
+《重新定义公司：谷歌是如何运营的》  作者：埃里克·施密特
+《战后日本经济史》  作者：野口悠纪雄
+《彼得·林奇的成功投资》  作者：彼得·林奇
+《引火线》  作者：巴哈拉特·阿南德
