--- a/business/传记/李想.md
+++ b/business/传记/李想.md
@@ -10,6 +10,31 @@
 中国蓬勃发展的时候已经过去了，重新定位自己的所有决定。
 提炼到两个字：专业
 
+产品力，最重要的事管理能力
+    制定目标，对目标的选择解决问题需要专注，不可贪心寄希望同时解决几类问题
+用户价值的衡量？
+    真正付出时间，或付出金钱同一把尺子。
+    做产品的时候只谈价值，不谈体验 
+        —— 事前衡量
+好的产品特质：优越感、价值、安全感
+做汽车之家的初心:
+    之前想做携程，携程当初的核心竞争力几千人的呼叫中心
+    搜房：管理几千的分战公司
+    汽车市场：当时是一个卖房市场，汽车是一辆标准化产品
+    每天更新，坚持了十年；每天发布客户是有安全感的，客户能看到自己想要的内容是有价值的，最后当客户对产品产生情感以后，他是有优越感的。
+智能汽车：
+    以太网，云服务、账号系统结合，使得车是一个不断升级、有生命力的产品
+    广阔的扩展性
+
+    2030年思考
+    纯电动和混合动力各占一半市场，车都是智能的
+    会出现苹果一样的万亿美金的企业，这样的企业肯定来自中国
+
+李想对于互联网的思考：   
+    对于用户的把握
+    懒，取巧，简单的步骤识别到本质
+
+
 如果做到专业的CEO：
 1.认知
     行业趋势：
@@ -31,3 +56,16 @@
         第二阶段招人 相信企业价值观并是顶尖人才
     目标要求
         第一目标：现金流为正
+3.业务
+    业务架构
+    在线系统
+    运营系统
+        运营比较好的例子：苹果、头条系、腾讯
+
+
+这个世界上本质上有两种企业：
+    超级平台（数据时代、互联网时代产生的，占比0.01） —— 类似于海洋战争，
+        防止下次技术革命的时候淘汰掉自己，比如FACEBOOK 收购watsapp,ins
+    非平台企业（占比99.9%） —— 类似于陆地战争，比较运营能力。 
+        往平台企业变革，升级
+        理想 目标 -> 拿到自动驾驶的门票
