--- a/business/传记/邓小平.md
+++ b/business/传记/邓小平.md
@@ -1,99 +1,118 @@
 #####  与邓小平相关的人
-
 陈云 - 中国计划经济之父
 通过行政管制和市场手段双管齐下，中共在陈云的领导下于1952年完成了国民党和军阀多年无法办到的事情：控制住了通货膨胀。
-
-
-
-
 
 邓力群
 邓力群读过《水浒传》和几乎所有古代侠义小说，养成了一种重义气的信念且毕生信守不渝。
 
-
-
 胡乔木
 担任过毛泽东的秘书
-
-
 
 胡耀邦
 他缺少最高领导人所应有的沉稳与庄重
 
-
-
 华国锋
 华国锋是个多面手，他在官场上步步高升，具备在所有部门的工作经验：农业、工业、财政、文教和科技
 
-
-
 纪登奎
 邓小平了解纪登奎的能力，曾支持把他派到浙江开展工作。纪登奎具备领导这个派性严重的省份政府工作所需要的资格：经验、技巧以及高层领导人的支持
-
-
 
 李先念
 他不会强烈表明自己的意见，避免采取拥护某个领导人反对另一个领导人的政治立场。李先念是个善于求生存的人，总是能够随政治风向而动。
 李先念做人很灵活，这使他能够加入到邓小平的改革团队之中，但他不是一个全心全意的改革家。
 
-
-
 毛远新
-毛泽东的侄子。
-极左思想
-
-
-
-
+毛泽东的侄子。极左思想
 
 任仲夷
 坚定的改革派，出类拔萃的省级领导人，堪称领导广东的不二人选
 他在退休后曾大胆地公开倡言：问党为什么不能像搞经济特区那样，也搞一搞政治特区试验。
 
-
-
-
-
 万里
 万里是个务实、直率和坚强的人，总是愿意为群众办好事
-
-
+在讨论农业问题的会议上，万里找来在农业方面有威望的专家杜润生。【家庭联产承包责任制】一词是由杜润生提出的
 
 王洪文
-毛知道王洪文文化水平不高，叫他多看包括马列在内的理论著作，还建议他读一读《后汉书》中刘盘子的股市
-
-
+毛知道王洪文文化水平不高，叫他多看包括马列在内的理论著作，还建议他读一读《后汉书》中刘盘子的故事
 
 习仲勋
 在抗战和内战期间，习仲勋一直在西北地方工作
 
-
-
 叶剑英
 叶避免插手具体事务，他更愿意把责任交给别人去承担，他不表达明确的意见，但随时愿意提供建议
 
-
-
-
-
 余秋里
 有用截肢手术，以刚毅果断、足智多谋著称
-
-
 
 赵紫阳
 赵紫阳靠的是他的头脑以及他领会国外及经验和构想新方案的强大能力
 
 
+薛暮橋
+富有经验的经济顾问
 
 --------
 他努力让所有中国人过上富裕生活，维持与其他国家的良好关系，大力削减学费，增强法律的作用，扩大普通民众公开表达意见的机会等。
-
-
-
 
 研究邓小平最基本的一部文献《邓小平年谱》
 官方的《邓小平文选》
 邓小平小女儿毛毛《我的父亲邓小平》、《邓小平：文革岁月》
 
 胡耀邦的女儿：《四年依然无尽：回忆父亲胡耀邦》
+
+
+
+除了非正式的交流之外，政研室的成员每两周开一次例会。
+最初这个机构只有六个老资格的成员：胡乔木、吴冷西、李鑫、熊复和于光远（经济学家）
+很快又增加了第七名成员 邓力群
+
+他对方毅和李昌说，必须强调要把脑力劳动者也视为政治上受尊重的工人阶级的成员
+在中国的经济领导人中，谷牧的地位仅次于李先念和余秋里
+广泛接触，详细调查，深入研究问题
+
+他再次建议首先看大局，然后再想局部；先讲大道理，再谈小道理
+
+邓小平阐明了不容挑战的四项基本原则，在可接受和不可接受的事情之间划定了界限：
+* 社会主义道路
+* 无产阶级专政
+* 共产党的领导
+* 马克思列宁主义和毛泽东思想
+
+人民日报：有人认为民主就是可以为所欲为，但我们主张的民主是在集中指导下的民主
+邓小平对事情有深入的思考，出了问题时他会承认错误并加以改正
+
+“他是否担心中国留学生叛逃？” 邓小平回答说：他不担心此事，他说，中国留学生不同于俄国学生，他们忠于自己的国家，即使去国外留学后没有马上回国的人，从长远来看仍是中国的一笔财富。
+邓心胸真宽阔呀
+
+成功的领导人不仅要决定正确的长期战略方向，还应当知道如何去营造【气氛】，如何选准时机采取大胆的步骤，在干部群众都愿意支持时迅速采取行动。
+
+所以到底是陈云的前十年温和的增长打基础，后十年再谋求更快的增长？ 
+还是邓小平的突破计划目标按高增长来定目标？
+
+赵紫阳宣布【商品交换】要遵循【价值规律】，价格由价值决定：商品供应不足，价格就会越高。
+
+《八一七公报》、连同1972年2月27日的《上海公报》和1979年1月1日的《中美建交公报》一起，成为美中关系的三个基础文件。
+
+1980年代实权一直掌握在邓小平、陈云、李先念和【六人小组（薄一波、彭真、彭颖超、宋任穷、杨尚昆和王震）】手里
+邓小平蒋社会主义的积极力量与资产阶级的自私自利做了比较，通过保留土地公有制和企业国有制，中国能够[消除资本注意 -  所必然产生的种种贪婪、腐败和不公正的现象 - 资产阶级自由化的宣传，也就是走资本主义道路的宣传，一定要坚决反对]
+邓小平继续向中国民众解释说：社会主义公有制优于资产阶级民主，他指出资本家剥削工人，实现三权分立的国家难以及时做出决策。
+邓小平希望通过高度积极的人员提高管理效率，赵紫阳则想更大范围地减少党在经济和社会单位中的作用。
+我们的改革的主要目标，是保证行政机构的工作效率，不受外界太多的干涉。 对民主不要感情用事，民主只是手段，民主应该同法制结合在一起，只有依靠法律，我们才能有一个稳定的环境。
+
+江泽民面对学潮，用英语背诵了一段林肯的葛底斯堡演说
+中共最高领导层在选拔接班人时偏爱出身中共革命者的家庭、特别是烈士家庭的人，因为他们在紧要关头能够靠得住，绝对忠实于党
+1989年邓小平就坚信，苏联和东欧领导人没有为维护党和国家的权力作出足够的努力。
+
+邓小平指示他的接班人如何应对西方仍在继续的制裁和可能得指责，他说：概括起来就是三句话：冷静观察、稳住阵脚、沉着应对。
+口头禅：冷静观察、稳住阵脚、沉着应付、有所作为
+
+1989年的事件也有外部环境的影响：苏联和东欧的政治剧变
+
+
+
+
+
+激荡四十年
+1979年 首钢改革 周冠武
+1980年 深圳改革开放
+1981年 
