--- a/business/company/万科.md
+++ b/business/company/万科.md
@@ -97,3 +97,16 @@
 EVAR创造取决于两方面：资本收益(投入资本回报率)和资本成本(加权平均资本成本)，前者必须大于后者。
 衡量价值创造的关键指标是经济增加值率：
 经济增加值率(%) = 投入资本回报率 - 加权平均资本成本
+
+
+万科模式：
+为什么大型公众公司所有权控制权分离之后，经营者支配会成为公司治理结构的主要形式？代理人唱主角怎么会优于大股东包括家族控制呢？
+1.这是分工与专业化发展的结果
+2.经营者队伍是产生企业家人才最好的土壤
+3.经营者作为代理人要求在企业的经营上有支配权即全权代理而非分权代理
+4.经营者支配可以更好地服务于企业的整体利益从而服务全体股东的长期利益
+5.经营者支配的最大问题就是经营者可能利用自己的主导支配地位谋取私利，从而损害企业和股东的利益
+
+
+
+我们也相信善待客户、为客户创造价值是永恒的商业逻辑。性价比在任何时候都是竞争力的核心
