--- a/business/学习财报/财务知识学习.md
+++ b/business/学习财报/财务知识学习.md
@@ -1,15 +1,15 @@
 ROE净资产收益率是由三个因素相乘得出的，他们是净利润率、总资产周转率和权益乘数
-
-
-
 关键比率（KR） = ROE / 分红比率  【也就是湿雪和长坡】
-
 <img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220428172314946.png" alt="image-20220428172314946" style="zoom:50%;margin-left:-1px" />
 
 ROE代表是竞争优势，意味着公司是否在一个行业里面持续创造出高的收益率
-
 分红比率反映的是长坡，公司有没有在持续扩大自己的规模、去赚取更多的收益
-
-
 经营性现金流 = 营业收入 - 营业成本 - 所得税 = 息税前利润加折旧 - 所得税
 
+现金收入比 = 销售商品提供劳务收到的现金 / 营业总收入
+盈利质量系数 = 经营活动现金净流量 / 净利润
+
+
+
+利润表是按照权责发生制作为编制基础，比如赊销货物，没有收到货款，但是会增加收入和应收账款
+现金流量表编制是按收付实现制，以现金收到作为确认标志
