--- a/business/要读的书/1.md
+++ b/business/要读的书/1.md
@@ -356,3 +356,14 @@
 《战后日本经济史》  作者：野口悠纪雄
 《彼得·林奇的成功投资》  作者：彼得·林奇
 《引火线》  作者：巴哈拉特·阿南德
+
+
+姜诚推荐：
+《统治史》 全三卷
+
+
+
+
+雪球郭荆璞推荐
+《金融帝国贝莱德》
+麦克尼尔《全球观》、卡普兰《荒野帝国》、雷斯托尔《西班牙征服的七个神话》、米哈伊尔《奥斯曼之影》
