--- a/business/读书笔记/大国锁钥.md
+++ b/business/读书笔记/大国锁钥.md
@@ -23,3 +23,5 @@
 民营航天发展受制于国有，还是有点难，只能做跟随者？
 观察了那么几个案例发现中国对C端领域的东西研究和市场化很在行的
 美国的波音、英特尔、德州仪器、苹果、微软、谷歌、甲骨文、GE、惠普这些大型科技企业的发展，身后都有军方旗下DARPA（Defense Advanced Research Projects Agency，美国国防高级研究规划局）的影子
+CRH380系列使用湖南株洲电机厂或山西永济电机厂生产的电机，在最强状态下，功率可以达到2万千瓦以上
+2017年6月，标动正式亮相，并被命名为“复兴号”，代号CR400，中国标准总计254项，占比达84%，80%的零部件为自主可控的国产产品，寿命和性能都远超之前的“和谐号”动车组
